Rename to a util

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				'onMediaQuery': '//rawgit.com/JoshBarr/on-media-query/master/js/onmediaquery.min',
 			}
 		})
-		require(['skeletor.component-loader'])
+		require(['skeletor.util.componentLoader'])
 	</script>
 </body>
 </html>
